# ucw

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  UCW_SOVEREIGN_SPRINT_BRIEFING.md  pyproject.toml  setup.sh
.claude/: session-task.md
.github/workflows/: ci.yml
docs/: quickstart.md
src/ucw/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  demo.py  enrichment.py  errors.py  search.py  web.py  web_ui.py
src/ucw/db/: __init__.py  migrations.py  schema.sql  sqlite.py
src/ucw/db/migrations/: 001_knowledge_graph.py  002_conversation_threads.py  003_alerts.py  004_agent_learnings.py  005_proof_of_cognition.py  006_fts5_search.py  007_embedding_cache.py  008_noise_flag.py  __init__.py
src/ucw/importers/: base.py  chatgpt.py  claude_code.py  cursor.py  grok.py
src/ucw/intelligence/: __init__.py  agent_memory.py  alerting.py  entity_extractor.py  event_stream.py  graph_store.py  relationship_mapper.py  temporal.py  thread_linker.py
src/ucw/protocol/: __init__.py  hash_chain.py  merkle.py
src/ucw/server/: __init__.py  capture.py  embeddings.py  logger.py  protocol.py  router.py  server.py  transport.py  ucw_bridge.py
src/ucw/tools/: __init__.py  agent_tools.py  coherence_tools.py  graph_tools.py  intelligence_tools.py  proof_tools.py  temporal_tools.py  ucw_tools.py
tasks/: prd-ucw-v05-data-quality-revolution.md
tests/: conftest.py  test_agent_temporal.py  test_capture.py  test_capture_health.py  test_capture_pipeline.py  test_cli.py  test_cli_commands.py  test_cli_extended.py  test_cli_search_web.py  test_coherence_moments_db.py  test_coherence_tools.py  test_config.py  test_cursor_mcp.py  test_dashboard_demo.py  test_dashboard_extended.py  test_embeddings.py  test_enrichment.py  test_errors.py  test_importers.py  test_importers_extended.py  test_knowledge_graph.py  test_logger.py  test_mcp_live.py  test_proof_extended.py  test_proof_of_cognition.py  test_protocol.py  test_protocol_extras.py  test_realtime_fusion.py  test_router.py  test_search.py  test_server_unit.py  test_sqlite.py  test_transport.py  test_ucw_bridge.py  test_ucw_tools.py  test_web.py
tests/fixtures/: chatgpt_export.json  cursor_export.json  grok_export.json
