[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ucw"
version = "0.4.0"
description = "Universal Cognitive Wallet — Cross-platform AI cognitive capture via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dico Angelo", email = "dicoangelo@metaventionsai.com" },
]
keywords = ["mcp", "cognitive", "ai", "capture", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
ui = [
    "rich>=13.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
]

[project.scripts]
ucw = "ucw.cli:main"

[project.urls]
Homepage = "https://github.com/Dicoangelo/ucw"
Repository = "https://github.com/Dicoangelo/ucw"
Issues = "https://github.com/Dicoangelo/ucw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ucw"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/ucw/web_ui.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
